--- a/student_performance_tracker.ipynb
+++ b/student_performance_tracker.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -74,22 +74,42 @@
       "_______________Welcome to the Student Performance Tracker_______________\n",
       "\n",
       "\n",
-      "Enter student's name (or type 'done' to finish): mona\n",
-      "Enter mona's score in Maths: 90\n",
-      "Enter mona's score in Science: 90\n",
-      "Enter mona's score in English: 90\n",
+      "Enter student's name (or type 'done' to finish): Memoona\n",
+      "Enter Memoona's score in Maths: 99\n",
+      "Enter Memoona's score in Science: 97\n",
+      "Enter Memoona's score in English: 90\n",
+      "\n",
+      "\n",
+      "Enter student's name (or type 'done' to finish): Abeera\n",
+      "Enter Abeera's score in Maths: 89\n",
+      "Enter Abeera's score in Science: 87\n",
+      "Enter Abeera's score in English: 65\n",
+      "\n",
+      "\n",
+      "Enter student's name (or type 'done' to finish): Ezza\n",
+      "Enter Ezza's score in Maths: 56\n",
+      "Enter Ezza's score in Science: 34\n",
+      "Enter Ezza's score in English: 67\n",
       "\n",
       "\n",
       "Enter student's name (or type 'done' to finish): done\n",
       "\n",
       "...............Student Performance Report...............\n",
       "\n",
-      "Name: mona \n",
-      "Average Score: 90.00 \n",
+      "Name: Memoona \n",
+      "Average Score: 95.33 \n",
       "Status: Pass\n",
       "\n",
+      "Name: Abeera \n",
+      "Average Score: 80.33 \n",
+      "Status: Pass\n",
       "\n",
-      "Class Average Score: 90.00\n"
+      "Name: Ezza \n",
+      "Average Score: 52.33 \n",
+      "Status: Needs Improvement\n",
+      "\n",
+      "\n",
+      "Class Average Score: 76.00\n"
      ]
     }
    ],
